--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@oracle/oraclejet": "~5.1.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
     "@oracle/grunt-oraclejet": "~5.1.0",
-    "load-grunt-config": "0.19.2",
     "@oracle/oraclejet-tooling": "~5.1.0",
-    "qunit-reporter-junit": "^1.1.1",
-    "qunit": "^2.4.1"
+    "grunt": "^1.0.1",
+    "load-grunt-config": "0.19.2",
+    "node-sass": "^4.7.2",
+    "qunit": "^2.4.1",
+    "qunit-reporter-junit": "^1.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
