--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
-    "@oracle/oraclejet": "~5.1.0"
+    "@oracle/oraclejet": "^5.2.0",
+    "@oracle/oraclejet-tooling": "^5.2.0"
   },
   "devDependencies": {
     "@oracle/grunt-oraclejet": "~5.1.0",
-    "@oracle/oraclejet-tooling": "~5.1.0",
     "grunt": "^1.0.1",
     "load-grunt-config": "0.19.2",
     "node-sass": "^4.7.2",
